--- a/Was.EventBus.Autofac/Was.EventBus.Autofac.nuspec
+++ b/Was.EventBus.Autofac/Was.EventBus.Autofac.nuspec
@@ -4,15 +4,14 @@
     <id>$id$</id>
     <version>$version$</version>
     <title>$title$</title>
-    <authors>$author$</authors>
-    <owners>$author$</owners>
-    <licenseUrl>http://LICENSE_URL_HERE_OR_DELETE_THIS_LINE</licenseUrl>
-    <projectUrl>http://PROJECT_URL_HERE_OR_DELETE_THIS_LINE</projectUrl>
-    <iconUrl>http://ICON_URL_HERE_OR_DELETE_THIS_LINE</iconUrl>
+    <authors>Patryk Wasiewicz</authors>
+    <owners>Patryk Wasiewicz</owners>
+    <licenseUrl>https://github.com/pwasiewicz/Was.EventBus</licenseUrl>
+    <projectUrl>https://github.com/pwasiewicz/Was.EventBus</projectUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
-    <description>$description$</description>
-    <releaseNotes>Summary of changes made in this release of the package.</releaseNotes>
-    <copyright>Copyright 2015</copyright>
-    <tags>Tag1 Tag2</tags>
+    <description>An integration for Was.EventBus with Autofac.</description>
+    <releaseNotes>First, alpha release.</releaseNotes>
+    <copyright>Copyright Patryk Wasiewicz 2015</copyright>
+    <tags>Was.EventBus Autofac event bus</tags>
   </metadata>
 </package>
