--- a/Was.EventBus.Autofac/Was.EventBus.Autofac.csproj
+++ b/Was.EventBus.Autofac/Was.EventBus.Autofac.csproj
@@ -30,13 +30,11 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Autofac, Version=3.5.0.0, Culture=neutral, PublicKeyToken=17863af14b0044da, processorArchitecture=MSIL">
+    <Reference Include="Autofac">
       <HintPath>..\packages\Autofac.3.5.2\lib\net40\Autofac.dll</HintPath>
-      <Private>True</Private>
     </Reference>
-    <Reference Include="Castle.Core, Version=3.3.0.0, Culture=neutral, PublicKeyToken=407dd0808d44fbdc, processorArchitecture=MSIL">
+    <Reference Include="Castle.Core">
       <HintPath>..\packages\Castle.Core.3.3.3\lib\net40-client\Castle.Core.dll</HintPath>
-      <Private>True</Private>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -45,9 +43,8 @@
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
-    <Reference Include="Was.EventBus, Version=0.0.1.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Was.EventBus.0.0.1.0\lib\net40\Was.EventBus.dll</HintPath>
-      <Private>True</Private>
+    <Reference Include="Was.EventBus">
+      <HintPath>..\packages\Was.EventBus.0.0.1.1\lib\net40\Was.EventBus.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
