Event fatal exception

--- a/Was.EventBus/Was.EventBus.csproj
+++ b/Was.EventBus/Was.EventBus.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Exception\EventFatalError.cs" />
     <Compile Include="IEvent.cs" />
     <Compile Include="IImplementationProvider.cs" />
     <Compile Include="Invokers\MultiInterfaceProxy.cs" />
