--- a/Was.EventBus.Autofac.Tests/Was.EventBus.Autofac.Tests.csproj
+++ b/Was.EventBus.Autofac.Tests/Was.EventBus.Autofac.Tests.csproj
@@ -54,6 +54,8 @@
   </Choose>
   <ItemGroup>
     <Compile Include="EventBusModuleTests.cs" />
+    <Compile Include="ExceptionEvent\IEventWithException.cs" />
+    <Compile Include="ExceptionEvent\ThrowableEvent.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SampleEvent\CheckCtorCalledEvent.cs" />
     <Compile Include="SampleEvent\ISomeEvent.cs" />
