--- a/Was.EventBus.MiniAutFac/packages.config
+++ b/Was.EventBus.MiniAutFac/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Castle.Core" version="3.3.3" targetFramework="net45" />
-  <package id="MiniAutFac" version="1.3.6" targetFramework="net45" />
+  <package id="MiniAutFac" version="1.3.8" targetFramework="net45" />
+  <package id="Was.EventBus" version="0.0.1.6" targetFramework="net45" />
 </packages>
