--- a/Was.EventBus.Autofac/packages.config
+++ b/Was.EventBus.Autofac/packages.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Autofac" version="3.5.2" targetFramework="net40" />
-  <package id="Castle.Core" version="3.3.3" targetFramework="net40" />
-  <package id="Was.EventBus" version="0.0.1.6" targetFramework="net40" />
+  <package id="Castle.Core" version="3.3.3" targetFramework="net4" requireReinstallation="true" />
+  <package id="Was.EventBus" version="0.0.1.8" targetFramework="net40" />
 </packages>
